--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,6 +20,11 @@ body {
   width: 100%;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .header,
 .container,
 .footer {
@@ -42,7 +47,7 @@ body {
 }
 
 .header-input--container {
-  width: 500px;
+  width: 48%;
 }
 
 .search-label {
@@ -92,8 +97,9 @@ body {
   display: flex;
   flex-direction: column;
   height: 275px;
-  justify-content: flex-end;
-  padding: 0rem 2rem;
+  justify-content: flex-start;
+  padding: 3rem 2rem 1rem;
+  text-align: right;
   width: 48%;
 }
 
@@ -101,9 +107,24 @@ body {
   margin-top: 4%;
 }
 
-.postcard-item:hover {
+.postcard-item > * {
+  margin: 0;
+  max-width: 400px;
+}
+
+.postcard-link {
+  border: 3px solid white;
+  font-weight: bold;
+  margin-top: auto;
+  min-width: 125px;
+  padding: 1rem 2rem;
+  text-align: center;
+}
+
+.postcard-link:hover {
   cursor: pointer;
 }
+
 /* footer */
 .footer {
   grid-area: footer;
