--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,6 @@
 }
 * {
   box-sizing: border-box;
-  font-size: 100%;
 }
 
 body {
@@ -23,6 +22,19 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  margin: 0;
+  padding: 0;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 .header,
@@ -44,9 +56,20 @@ a {
 .header-logo {
   margin-bottom: 3rem;
   max-width: 200px;
+  width: 100%;
+}
+
+.animate {
+  animation-duration: 1s;
+  animation-name: loader;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  transform-origin: 76% 69%;
 }
 
 .header-input--container {
+  position: relative;
   width: 48%;
 }
 
@@ -66,11 +89,12 @@ a {
   border: 3px solid var(--color-red);
   color: var(--color-red);
   font-size: 21px;
-  font-weight: bold;
+  font-weight: normal;
   height: 75px;
   padding: 1rem 2rem;
   position: relative;
   width: 100%;
+  z-index: 5;
 }
 
 .search-bar:focus {
@@ -80,6 +104,25 @@ a {
 .search-bar:focus + .search-label {
   font-size: 12px;
   transform: translate(14px, -82px);
+}
+
+.search-label {
+  z-index: 20;
+}
+
+.search-button {
+  background-color: var(--color-red);
+  border: none;
+  height: 75px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 83px;
+  z-index: 10;
+}
+
+.search-button > img {
+  width: 36px;
 }
 
 /* main */
@@ -112,7 +155,7 @@ a {
   max-width: 400px;
 }
 
-.postcard-link {
+.postcard-item--link {
   border: 3px solid white;
   font-weight: bold;
   margin-top: auto;
@@ -121,11 +164,25 @@ a {
   text-align: center;
 }
 
-.postcard-link:hover {
+.postcard-item--link:hover {
   cursor: pointer;
+}
+
+.postcard-detail--image {
+  max-width: 600px;
+  width: 100%;
 }
 
 /* footer */
 .footer {
   grid-area: footer;
+}
+
+@keyframes loader {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(90deg);
+  }
 }
